# spotcrates

./: .flake8  .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 5aac0c2505d9_add_a_column.py  5b47a2873750_create_account_table.py  db843fd2cc0e_initial_attempt_at_music_data_model.py
spotcrates/: app.py  cli.py  common.py  filters.py  music.py  playlists.py  playlists_test.py
tests/: data_locs.py  dump_playlist.py  sqlalchemy_tutorial.py  test_cli.py  test_common.py  test_filter_list.py  test_filters.py  test_playlists.py  utils.py
tests/data/: playlists.json  track_ids_page1.json  tracks_daily1.json  tracks_overplayed.json  tracks_target.json
